[gd_scene load_steps=5 format=3 uid="uid://cahellgbf7ioq"]

[ext_resource type="Texture2D" uid="uid://b0mpvc774fp2w" path="res://addons/rpgmakerutils/templates/twok_main_cutter.png" id="1_pjfgc"]
[ext_resource type="Script" path="res://addons/rpgmakerutils/MapConverter.gd" id="2_i1t6m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2rryj"]
texture = ExtResource("1_pjfgc")
texture_region_size = Vector2i(2, 2)
2:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:0/0 = 0
3:0/0 = 0
0:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:2/0 = 0
9:1/0 = 0
9:0/0 = 0
8:0/0 = 0
8:1/0 = 0
9:3/0 = 0
8:2/0 = 0
7:1/0 = 0
7:0/0 = 0
7:2/0 = 0
6:2/0 = 0
5:2/0 = 0
5:1/0 = 0
6:1/0 = 0
6:0/0 = 0
5:0/0 = 0
4:2/0 = 0
3:2/0 = 0
2:2/0 = 0
1:3/0 = 0
1:2/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_hmkm7"]
tile_size = Vector2i(2, 2)
sources/0 = SubResource("TileSetAtlasSource_2rryj")

[node name="TWOKExtractAutotiles" type="TileMap"]
texture_filter = 1
tile_set = SubResource("TileSet_hmkm7")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 2, 1, 65536, 2, 2, 0, 3, 3, 65536, 3, 4, 131072, 0, 5, 196608, 0, 6, 131072, 1, 7, 196608, 1, 8, 131072, 2, 9, 196608, 2, 10, 131072, 3, 11, 196608, 3)
script = ExtResource("2_i1t6m")
tiles = Vector2i(10, 4)
