[gd_scene load_steps=5 format=3 uid="uid://ckd1no501hkn5"]

[ext_resource type="Texture2D" uid="uid://b0mpvc774fp2w" path="res://addons/rpgmakerutils/templates/twok_main_cutter.png" id="1_gaxqr"]
[ext_resource type="Script" path="res://addons/rpgmakerutils/MapConverter.gd" id="2_g4hi0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2rryj"]
texture = ExtResource("1_gaxqr")
texture_region_size = Vector2i(2, 2)
2:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:0/0 = 0
3:0/0 = 0
1:1/0 = 0
0:1/0 = 0
0:0/0 = 0
1:0/0 = 0
0:2/0 = 0
1:2/0 = 0
1:3/0 = 0
0:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:2/0 = 0
9:1/0 = 0
9:0/0 = 0
8:0/0 = 0
8:1/0 = 0
9:3/0 = 0
8:2/0 = 0
7:1/0 = 0
7:0/0 = 0
7:2/0 = 0
6:2/0 = 0
5:2/0 = 0
5:1/0 = 0
6:1/0 = 0
6:0/0 = 0
5:0/0 = 0
4:2/0 = 0
3:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_hmkm7"]
tile_size = Vector2i(2, 2)
sources/0 = SubResource("TileSetAtlasSource_2rryj")

[node name="TWOKExtractLower" type="TileMap"]
texture_filter = 1
tile_set = SubResource("TileSet_hmkm7")
format = 2
layer_0/tile_data = PackedInt32Array(0, 262144, 0, 65536, 262144, 1, 1, 327680, 0, 65537, 327680, 1, 131072, 262144, 2, 196608, 262144, 3, 131073, 327680, 2, 196609, 327680, 3, 2, 393216, 0, 65538, 393216, 1, 3, 458752, 0, 65539, 458752, 1)
script = ExtResource("2_g4hi0")
tiles = Vector2i(10, 4)
