[gd_scene load_steps=5 format=3 uid="uid://br120aqkho4yl"]

[ext_resource type="Texture2D" uid="uid://b0mpvc774fp2w" path="res://addons/rpgmakerutils/templates/twok_main_cutter.png" id="1_mp8y0"]
[ext_resource type="Script" path="res://addons/rpgmakerutils/MapConverter.gd" id="2_xir4a"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2rryj"]
texture = ExtResource("1_mp8y0")
texture_region_size = Vector2i(2, 2)
2:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:0/0 = 0
3:0/0 = 0
1:1/0 = 0
0:1/0 = 0
0:0/0 = 0
1:0/0 = 0
0:2/0 = 0
1:2/0 = 0
1:3/0 = 0
0:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:2/0 = 0
9:1/0 = 0
9:0/0 = 0
8:0/0 = 0
8:1/0 = 0
9:3/0 = 0
8:2/0 = 0
7:1/0 = 0
7:0/0 = 0
7:2/0 = 0
6:2/0 = 0
5:2/0 = 0
5:1/0 = 0
6:1/0 = 0
6:0/0 = 0
5:0/0 = 0
4:2/0 = 0
3:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_hmkm7"]
tile_size = Vector2i(2, 2)
sources/0 = SubResource("TileSetAtlasSource_2rryj")

[node name="TWOKExtractUpper" type="TileMap"]
texture_filter = 1
tile_set = SubResource("TileSet_hmkm7")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 1, 1, 65536, 0, 65537, 65536, 1)
script = ExtResource("2_xir4a")
tiles = Vector2i(10, 4)
