[gd_scene load_steps=5 format=3 uid="uid://dbe5jf2j71e3e"]

[ext_resource type="Texture2D" uid="uid://cxdccwn0o5ba3" path="res://addons/rpgmakerutils/templates/twok_water_cutter.png" id="1_aw3p1"]
[ext_resource type="Script" path="res://addons/rpgmakerutils/MapConverter.gd" id="2_iaeyf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ntqe"]
texture = ExtResource("1_aw3p1")
texture_region_size = Vector2i(2, 2)
1:0/0 = 0
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
1:4/0 = 0
2:5/0 = 0
2:6/0 = 0
1:6/0 = 0
1:7/0 = 0
1:8/0 = 0
1:9/0 = 0
0:10/0 = 0
0:11/0 = 0
0:12/0 = 0
0:13/0 = 0
1:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
3:14/0 = 0
2:14/0 = 0
1:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:15/0 = 0
0:14/0 = 0
6:13/0 = 0
5:13/0 = 0
4:13/0 = 0
3:13/0 = 0
2:13/0 = 0
1:12/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:13/0 = 0
10:13/0 = 0
11:13/0 = 0
11:12/0 = 0
10:12/0 = 0
9:12/0 = 0
8:12/0 = 0
7:12/0 = 0
6:12/0 = 0
5:12/0 = 0
4:12/0 = 0
3:12/0 = 0
2:12/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
4:10/0 = 0
3:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
2:10/0 = 0
1:10/0 = 0
11:9/0 = 0
10:9/0 = 0
9:9/0 = 0
8:9/0 = 0
7:9/0 = 0
6:9/0 = 0
5:9/0 = 0
4:9/0 = 0
3:9/0 = 0
2:8/0 = 0
0:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
9:7/0 = 0
8:7/0 = 0
7:7/0 = 0
6:7/0 = 0
5:7/0 = 0
4:7/0 = 0
3:7/0 = 0
2:7/0 = 0
0:7/0 = 0
2:9/0 = 0
0:9/0 = 0
0:6/0 = 0
0:5/0 = 0
0:4/0 = 0
1:5/0 = 0
1:3/0 = 0
1:2/0 = 0
1:1/0 = 0
2:4/0 = 0
2:3/0 = 0
2:2/0 = 0
2:1/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
5:1/0 = 0
4:1/0 = 0
3:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
4:3/0 = 0
3:3/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
11:1/0 = 0
10:1/0 = 0
9:1/0 = 0
8:1/0 = 0
7:1/0 = 0
6:1/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
4:4/0 = 0
3:4/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
10:7/0 = 0
11:7/0 = 0

[sub_resource type="TileSet" id="TileSet_mdv67"]
tile_size = Vector2i(2, 2)
sources/0 = SubResource("TileSetAtlasSource_0ntqe")

[node name="TWOKWaterToAnim" type="TileMap"]
texture_filter = 1
tile_set = SubResource("TileSet_mdv67")
format = 2
layer_0/tile_data = PackedInt32Array(0, 393216, 8, 65536, 393216, 9, 1, 458752, 8, 65537, 458752, 9, 2, 393216, 10, 65538, 393216, 11, 3, 458752, 10, 65539, 458752, 11, 4, 393216, 12, 65540, 393216, 13, 5, 458752, 12, 65541, 458752, 13, 6, 393216, 14, 65542, 393216, 15, 7, 458752, 14, 65543, 458752, 15, 131072, 524288, 8, 196608, 524288, 9, 131073, 589824, 8, 196609, 589824, 9, 131074, 524288, 10, 196610, 524288, 11, 131075, 589824, 10, 196611, 589824, 11, 131076, 524288, 12, 196612, 524288, 13, 131077, 589824, 12, 196613, 589824, 13, 131078, 524288, 14, 196614, 524288, 15, 131079, 589824, 14, 196615, 589824, 15, 262144, 655360, 8, 327680, 655360, 9, 262145, 720896, 8, 327681, 720896, 9, 262146, 655360, 10, 327682, 655360, 11, 262147, 720896, 10, 327683, 720896, 11, 262148, 655360, 12, 327684, 655360, 13, 262149, 720896, 12, 327685, 720896, 13, 262150, 655360, 14, 327686, 655360, 15, 262151, 720896, 14, 327687, 720896, 15)
script = ExtResource("2_iaeyf")
tiles = Vector2i(12, 16)
