[gd_scene load_steps=5 format=3 uid="uid://cff4k1ferbssc"]

[ext_resource type="Texture2D" uid="uid://cxdccwn0o5ba3" path="res://addons/rpgmakerutils/templates/twok_water_cutter.png" id="1_es5u8"]
[ext_resource type="Script" path="res://addons/rpgmakerutils/MapConverter.gd" id="2_n10xq"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ntqe"]
texture = ExtResource("1_es5u8")
texture_region_size = Vector2i(2, 2)
1:0/0 = 0
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
1:4/0 = 0
2:5/0 = 0
2:6/0 = 0
1:6/0 = 0
1:7/0 = 0
1:8/0 = 0
1:9/0 = 0
0:10/0 = 0
0:11/0 = 0
0:12/0 = 0
0:13/0 = 0
1:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
3:14/0 = 0
2:14/0 = 0
1:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:15/0 = 0
0:14/0 = 0
6:13/0 = 0
5:13/0 = 0
4:13/0 = 0
3:13/0 = 0
2:13/0 = 0
1:12/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:13/0 = 0
10:13/0 = 0
11:13/0 = 0
11:12/0 = 0
10:12/0 = 0
9:12/0 = 0
8:12/0 = 0
7:12/0 = 0
6:12/0 = 0
5:12/0 = 0
4:12/0 = 0
3:12/0 = 0
2:12/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
4:10/0 = 0
3:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
2:10/0 = 0
1:10/0 = 0
11:9/0 = 0
10:9/0 = 0
9:9/0 = 0
8:9/0 = 0
7:9/0 = 0
6:9/0 = 0
5:9/0 = 0
4:9/0 = 0
3:9/0 = 0
2:8/0 = 0
0:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
9:7/0 = 0
8:7/0 = 0
7:7/0 = 0
6:7/0 = 0
5:7/0 = 0
4:7/0 = 0
3:7/0 = 0
2:7/0 = 0
0:7/0 = 0
2:9/0 = 0
0:9/0 = 0
0:6/0 = 0
0:5/0 = 0
0:4/0 = 0
1:5/0 = 0
1:3/0 = 0
1:2/0 = 0
1:1/0 = 0
2:4/0 = 0
2:3/0 = 0
2:2/0 = 0
2:1/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
5:1/0 = 0
4:1/0 = 0
3:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
4:3/0 = 0
3:3/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
11:1/0 = 0
10:1/0 = 0
9:1/0 = 0
8:1/0 = 0
7:1/0 = 0
6:1/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
4:4/0 = 0
3:4/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
10:7/0 = 0
11:7/0 = 0

[sub_resource type="TileSet" id="TileSet_mdv67"]
tile_size = Vector2i(2, 2)
sources/0 = SubResource("TileSetAtlasSource_0ntqe")

[node name="TWOKWaterToModern" type="TileMap"]
texture_filter = 1
tile_set = SubResource("TileSet_mdv67")
format = 2
layer_0/tile_data = PackedInt32Array(2, 0, 6, 65538, 0, 7, 3, 65536, 6, 65539, 65536, 7, 131075, 65536, 0, 327683, 65536, 1, 327680, 0, 1, 131072, 0, 0, 131073, 65536, 4, 131074, 0, 4, 327682, 0, 5, 327681, 65536, 5, 196611, 65536, 3, 262147, 65536, 2, 196608, 0, 3, 262144, 0, 2, 262146, 0, 8, 262145, 65536, 8, 196609, 65536, 9, 196610, 0, 9, 6, 131072, 6, 65542, 131072, 7, 7, 196608, 6, 65543, 196608, 7, 10, 262144, 6, 65546, 262144, 7, 11, 327680, 6, 65547, 327680, 7, 393218, 393216, 6, 458754, 393216, 7, 393219, 458752, 6, 458755, 458752, 7, 393222, 524288, 6, 458758, 524288, 7, 393223, 589824, 6, 458759, 589824, 7, 393226, 655360, 6, 458762, 655360, 7, 393227, 720896, 6, 458763, 720896, 7, 262151, 196608, 2, 262155, 327680, 2, 196619, 327680, 3, 196615, 196608, 3, 196612, 131072, 3, 262148, 131072, 2, 262152, 262144, 2, 196616, 262144, 3, 131076, 131072, 0, 131080, 262144, 0, 131083, 327680, 0, 131079, 196608, 0, 327687, 196608, 1, 327691, 327680, 1, 327688, 262144, 1, 327684, 131072, 1, 327685, 196608, 5, 327686, 131072, 5, 327690, 262144, 5, 327689, 327680, 5, 131081, 327680, 4, 131082, 262144, 4, 131078, 131072, 4, 131077, 196608, 4, 262150, 131072, 8, 262154, 262144, 8, 262153, 327680, 8, 262149, 196608, 8, 196613, 196608, 9, 196617, 327680, 9, 196618, 262144, 9, 196614, 131072, 9, 524288, 393216, 0, 524292, 524288, 0, 524296, 655360, 0, 524299, 720896, 0, 524295, 589824, 0, 524291, 458752, 0, 720896, 393216, 1, 720900, 524288, 1, 720904, 655360, 1, 720907, 720896, 1, 720903, 589824, 1, 720899, 458752, 1, 589827, 458752, 3, 655363, 458752, 2, 655367, 589824, 2, 655371, 720896, 2, 589835, 720896, 3, 589831, 589824, 3, 589824, 393216, 3, 655360, 393216, 2, 655364, 524288, 2, 589828, 524288, 3, 655368, 655360, 2, 589832, 655360, 3, 524297, 720896, 4, 524298, 655360, 4, 524293, 589824, 4, 524294, 524288, 4, 524289, 458752, 4, 524290, 393216, 4, 720898, 393216, 5, 720897, 458752, 5, 720902, 524288, 5, 720901, 589824, 5, 720906, 655360, 5, 720905, 720896, 5, 655362, 0, 8, 655366, 131072, 8, 655370, 262144, 8, 655369, 327680, 8, 655365, 196608, 8, 655361, 65536, 8, 589825, 65536, 9, 589829, 196608, 9, 589833, 327680, 9, 589834, 262144, 9, 589830, 131072, 9, 589826, 0, 9, 786434, 0, 8, 851970, 0, 9, 786435, 65536, 8, 851971, 65536, 9, 786438, 131072, 8, 851974, 131072, 9, 786439, 196608, 8, 851975, 196608, 9, 786442, 262144, 8, 851978, 262144, 9, 786443, 327680, 8, 851979, 327680, 9, 917504, 0, 10, 917507, 65536, 10, 1114115, 65536, 11, 1114112, 0, 11, 917508, 131072, 10, 1114116, 131072, 11, 917511, 196608, 10, 1114119, 196608, 11, 917512, 262144, 10, 917515, 327680, 10, 1114123, 327680, 11, 1114120, 262144, 11, 917505, 65536, 8, 917506, 0, 8, 917509, 196608, 8, 917510, 131072, 8, 917513, 327680, 8, 917514, 262144, 8, 1114113, 65536, 9, 1114114, 0, 9, 1114118, 131072, 9, 1114117, 196608, 9, 1114122, 262144, 9, 1114121, 327680, 9, 1048579, 65536, 8, 983043, 65536, 9, 1048576, 0, 8, 983040, 0, 9, 1048580, 131072, 8, 983044, 131072, 9, 983047, 196608, 9, 1048583, 196608, 8, 983041, 65536, 9, 983042, 0, 9, 1048577, 65536, 8, 1048578, 0, 8, 983045, 196608, 9, 983046, 131072, 9, 1048581, 196608, 8, 1048582, 131072, 8, 983048, 262144, 9, 983049, 327680, 9, 983050, 262144, 9, 983051, 327680, 9, 1048586, 262144, 8, 1048587, 327680, 8, 1048584, 262144, 8, 1048585, 327680, 8, 1179650, 0, 14, 1245186, 0, 15, 1179651, 65536, 14, 1245187, 65536, 15, 1179654, 131072, 14, 1245190, 131072, 15, 1179655, 196608, 14, 1245191, 196608, 15, 1179658, 262144, 14, 1245194, 262144, 15, 1179659, 327680, 14, 1245195, 327680, 15, 1310720, 0, 12, 1376256, 0, 15, 1310721, 65536, 14, 1376257, 65536, 15, 1441792, 0, 14, 1507328, 0, 13, 1441793, 65536, 14, 1507329, 65536, 15, 1310722, 0, 14, 1376258, 0, 15, 1310723, 65536, 12, 1376259, 65536, 15, 1441794, 0, 14, 1507330, 0, 15, 1441795, 65536, 14, 1507331, 65536, 13, 1310724, 131072, 12, 1376260, 131072, 15, 1310725, 196608, 14, 1376261, 196608, 15, 1441796, 131072, 14, 1507332, 131072, 13, 1441797, 196608, 14, 1507333, 196608, 15, 1441798, 131072, 14, 1507334, 131072, 15, 1441799, 196608, 14, 1507335, 196608, 13, 1310727, 196608, 12, 1310728, 262144, 12, 1310726, 131072, 14, 1376262, 131072, 15, 1376263, 196608, 15, 1376264, 262144, 15, 1310729, 327680, 14, 1376265, 327680, 15, 1310730, 262144, 14, 1376266, 262144, 15, 1310731, 327680, 12, 1376267, 327680, 15, 1441802, 262144, 14, 1507338, 262144, 15, 1441803, 327680, 14, 1507339, 327680, 13, 1441800, 262144, 14, 1507336, 262144, 13, 1441801, 327680, 14, 1507337, 327680, 15)
script = ExtResource("2_n10xq")
tiles = Vector2i(12, 16)
