[gd_scene load_steps=5 format=3 uid="uid://dyrhy330lwgm1"]

[ext_resource type="Texture2D" uid="uid://c61ksn0584f6" path="res://addons/rpgmakerutils/templates/wall.png" id="1_hpdds"]
[ext_resource type="Script" path="res://addons/rpgmakerutils/MapConverter.gd" id="2_x3xf5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_itsxx"]
texture = ExtResource("1_hpdds")
2:0/0 = 0
3:0/0 = 0
3:1/0 = 0
2:1/0 = 0
2:2/0 = 0
2:3/0 = 0
3:3/0 = 0
3:2/0 = 0
1:2/0 = 0
0:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_i48gj"]
sources/0 = SubResource("TileSetAtlasSource_itsxx")

[node name="ClassicToAutotile" type="TileMap"]
texture_filter = 1
tile_set = SubResource("TileSet_i48gj")
format = 2
layer_0/tile_data = PackedInt32Array(4, 131072, 0, 65540, 131072, 1, 5, 196608, 0, 65541, 196608, 1, 131072, 0, 2, 196608, 0, 1, 131073, 65536, 2, 196609, 65536, 1, 131076, 131072, 2, 196612, 131072, 1, 131077, 196608, 2, 196613, 196608, 1, 262146, 131072, 2, 262147, 65536, 2, 327682, 131072, 3, 327683, 65536, 3, 327680, 0, 3, 262144, 0, 2, 327685, 196608, 3, 262149, 196608, 2, 131074, 131072, 2, 131075, 65536, 2, 196610, 131072, 1, 196611, 65536, 1, 327681, 65536, 3, 262145, 65536, 2, 327684, 131072, 3, 262148, 131072, 2, 0, 0, 0, 65536, 0, 1, 1, 65536, 0, 65537, 65536, 1, 2, 131072, 0, 65538, 131072, 1, 3, 65536, 0, 65539, 65536, 1)
script = ExtResource("2_x3xf5")
tiles = Vector2i(4, 4)
